Fix vertical alignment of search form

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -13,6 +13,12 @@ body {
   font-weight: 300;
 }
 
+
+.my-2 {
+    margin-top: 1.1rem!important;
+    margin-bottom: .5rem!important;
+}
+
 a {
   color: #fff;
   font-weight: 300;
